--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,12 +20,14 @@ h1{
   font-weight: normal;
   font-size: 50px;
   color: white;
+  margin: 10px;
 }
 
 h2{
   font-weight: 300;
   font-size: 42px;
   color: white;
+  margin: 10px;
 }
 
 video, img{
@@ -36,11 +38,13 @@ video, img{
 a{
   color: aquamarine;
   font-size: 16px;
+  margin: 10px;
 }
 
 p{
   font-size: 21px;
   color: gray;
+  margin: 10px;
 }
 
 #credits{
